--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -8,8 +8,15 @@ ja:
           has_many: "%{record}が存在しているので削除できません"
     models:
       road: ルート
+      like: いいね
     attributes:
       road:
-      id: ID
-      created_at: 登録日時
-      updated_at: 更新日時
+        title: タイトル
+        description: 説明文
+        user: ユーザー
+      like:
+        user: ユーザー
+        road: 投稿
+  time:
+    formats:
+      default: "%Y年%-m月%-d日(%a) %-H時%-M分%-S秒"
