ユーザー新規登録画面のスタイルを実装

--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -20,6 +20,7 @@ ja:
     attributes:
       user:
         current_password: "現在のパスワード"
+        name: "アカウント名"
         email: "メールアドレス"
         password: "パスワード"
         password_confirmation: "確認用パスワード"
@@ -67,6 +68,7 @@ ja:
         update: "更新"
         we_need_your_current_password_to_confirm_your_changes: "変更を反映するには現在のパスワードを入力してください"
       new:
+        name: "名前"
         sign_up: "アカウント登録"
     sessions:
       new:
