アカウント編集画面のスタイルを適用

--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -22,9 +22,16 @@ ja:
         current_password: "現在のパスワード"
         name: "アカウント名"
         email: "メールアドレス"
+        age: "年齢"
+        prefecture: "都道府県"
+        gender: "性別"
+        bike_type: "バイクタイプ"
+        bike_name: "愛車名"
+        engine_size: "排気量"
+        experience_years: "ライダー歴"
+        through: "すり抜け"
         password: "パスワード"
         password_confirmation: "確認用パスワード"
-        username: "ユーザー名"
         remember_me: "ログインを記憶"
     models:
       user: "ユーザー"
