エラー文のレイアウトを修正

--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -19,6 +19,7 @@ ja:
               confirmation: "が内容とあっていません。"
     attributes:
       user:
+        avatar: "アバター"
         current_password: "現在のパスワード"
         name: "アカウント名"
         email: "メールアドレス"
