--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -20,3 +20,10 @@ ja:
   time:
     formats:
       default: "%Y年%-m月%-d日(%a) %-H時%-M分%-S秒"
+  views:
+    pagination:
+      first: "&laquo; 最初"
+      last: "最後 &raquo;"
+      previous: "&lsaquo; 前"
+      next: "次 &rsaquo;"
+      truncate: "..."
